# ma5-native

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: error.rs  lib.rs  smw5.rs
tools/: verify-package.sh
